# aoc2024

./: .gitignore  LICENSE  aoc2024.cabal
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs
day16/: Main.hs
day17/: Main.hs  OutputEff.hs  SMT.hs  sample-program.c  sample.smt2
day18/: Main.hs
day19/: Main.hs
day20/: Main.hs
day21/: Main.hs
day22/: Main.hs
day23/: Main.hs
day24/: Main.hs
day25/: Main.hs
lib/: OrphanInstances.hs  Textlib.hs  Utils.hs  Vec.hs
