cabal-version:      3.4
name:               aoc2024
version:            0.1.0.0
license:            NONE
category:           Data
build-type:         Simple
data-files:         inputs/*.txt

common warnings
    ghc-options: -Wall -Wno-type-defaults
    default-extensions: OverloadedStrings, RecordWildCards, ViewPatterns

library
    import:           warnings
    exposed-modules:  OrphanInstances, Textlib, Utils
    other-modules:    Paths_aoc2024
    autogen-modules:  Paths_aoc2024
    build-depends:    base, bytestring, hashable, massiv, megaparsec, text
    hs-source-dirs:   lib
    default-language: GHC2021

executable day01
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, text, unordered-containers
    hs-source-dirs:   day01
    default-language: GHC2021

executable day02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, text
    hs-source-dirs:   day02
    default-language: GHC2021

executable day03
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, megaparsec, text
    hs-source-dirs:   day03
    default-language: GHC2021

executable day04
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, massiv
    hs-source-dirs:   day04
    default-language: GHC2021

executable day05
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, megaparsec, text, unordered-containers 
    hs-source-dirs:   day05
    default-language: GHC2021

executable day06
    import:           warnings
    ghc-options:      -O2 -threaded -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    base, aoc2024, massiv, unordered-containers
    hs-source-dirs:   day06
    default-language: GHC2021

executable day07
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, megaparsec
    hs-source-dirs:   day07
    default-language: GHC2021

executable day08
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, massiv, unordered-containers
    hs-source-dirs:   day08
    default-language: GHC2021

executable day09
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, aoc2024, containers, text, vector
    hs-source-dirs:   day09
    default-language: GHC2021
